# Lima-camera-spectrumone

./: .gitignore  CMakeLists.txt  README.md  pom.xml  pom_64.xml  pom_64_Win7_shared.xml  pom_64_win_shared.xml
config/: hardware.cfg
config/544/: BCON1401.TAB  BCON1402.TAB  BCON1601.TAB  BCON1602.TAB  BCON1603.TAB  BCON1604.TAB  ECON1401.TAB  ECON1402.TAB  ECON1602.TAB  ECON1603.TAB  ECON1604.TAB  NIDL1602.TAB  PART1401.TAB  SERB1602.TAB  SERB1603.TAB  SERB1604.TAB  SERC1401.TAB  SERC1601.TAB  SERC1602.TAB  SERC1603.TAB  SERW1402.TAB  SERW1602.TAB  SERW1604.TAB  STID1602.TAB
config/DEF/: PARTRANS.TAB  SERBIN.TAB  SERWCONV.TAB
config/E13/: BCON1401.TAB  BCON1402.TAB  BCON1601.TAB  BCON1602.TAB  BCON1604.TAB  ECON1401.TAB  ECON1601.TAB  ECON1602.TAB  ECON1604.TAB  NIDL1604.TAB  PART1602.TAB  PART1603.TAB  SERB1401.TAB  SERB1601.TAB  SERB1602.TAB  SERC1602.TAB  SERC1604.TAB  SERW1401.TAB  SERW1402.TAB  SERW1603.TAB  SERW1604.TAB
config/EXT/: bconvert.tab  econvert.tab  nidle.tab  partrans.tab  serwconv.tab  stidle.tab
include/: SpectrumOneBinCtrlObj.h  SpectrumOneBufferCtrlObj.h  SpectrumOneCamera.h  SpectrumOneDetInfoCtrlObj.h  SpectrumOneEventCtrlObj.h  SpectrumOneInterface.h  SpectrumOneRoiCtrlObj.h  SpectrumOneShutterCtrlObj.h  SpectrumOneSyncCtrlObj.h
include/GpibInterface/: GpibInterface.h  GpibInterfaceException.h
include/SpectrumComms/: CommandInterface.h  CommandTask.h  Commands.hpp  Common.h  GpibComms.h
lib/GpibInterface/include/: GpibInterface.h  GpibInterfaceException.h
sdk/include/: ni4882.h  nisyscfg.h  nisyscfg_errors.h  nisyscfg_pxi.h  nisyscfg_wide.h
sdk/lib/: ni4882.lib
src/: SpectrumOneBinCtrlObj.cpp  SpectrumOneBufferCtrlObj.cpp  SpectrumOneCamera.cpp  SpectrumOneDetInfoCtrlObj.cpp  SpectrumOneEventCtrlObj.cpp  SpectrumOneInterface.cpp  SpectrumOneRoiCtrlObj.cpp  SpectrumOneShutterCtrlObj.cpp  SpectrumOneSyncCtrlObj.cpp
src/GpibInterface/: GpibInterface.cpp  GpibInterfaceException.cpp
src/SpectrumComms/: CommandFunctions.cpp  CommandInterface.cpp  CommandMessages.cpp  CommandTask.cpp  Common.cpp  GpibComms.cpp
(+51 files in other folders)
